<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open3d_ros_helper</name>
  <version>0.2.1</version>
  <description>A helper tool for jointly using Open3D and ROS</description>
  
  <license>MIT</license>

  <maintainer email="matthias.hirschmanner@tuwien.ac.at">Matthias Hirschmanner</maintainer>

  <url type="repository">https://github.com/v4r-robohockey/open3d-ros-helper</url>
  <url type="bugtracker">https://github.com/v4r-robohockey/open3d-ros-helper/issues</url>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
